--- a/CCC_CarCostCalculatorWPF/MainWindow.xaml
+++ b/CCC_CarCostCalculatorWPF/MainWindow.xaml
@@ -5,8 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CCC_CarCostCalculatorWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="600" Width="800">
+    <Grid Background="#FFF6F5EF">
+        <Grid HorizontalAlignment="Left" Height="560" Margin="647,10,0,0" VerticalAlignment="Top" Width="137">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="51*"/>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="51.2"/>
+                <RowDefinition Height="50*"/>
+            </Grid.RowDefinitions>
+            <TextBox x:Name="CarID_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="CarID_TextBox_TextChanged"/>
+            <TextBox x:Name="Miles_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="Miles_TextBox_TextChanged"/>
+            <TextBox HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="GasCost_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.RowSpan="2" TextChanged="GasCost_TextBox_TextChanged"/>
+            <TextBox x:Name="ServiceCost_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="ServiceCost_TextBox_TextChanged"/>
+            <TextBox x:Name="ExtraCost_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="ExtraCost_TextBox_TextChanged"/>
+            <TextBox x:Name="TaxCost_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TaxCost_TextBox_TextChanged"/>
+            <TextBox x:Name="Result_TextBox" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" Grid.Row="9" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="Result_TextBox_TextChanged"/>
+            <Button x:Name="Combine_Button" Content="Combine" HorizontalAlignment="Left" Margin="10,10.4,0,0" Grid.Row="6" VerticalAlignment="Top" Width="117" Height="31" IsDefault="True" FontWeight="Bold" FontSize="16" Click="Combine_Button_Click"/>
+            <Button x:Name="Print_Button" Content="Print" HorizontalAlignment="Left" Margin="10,10.4,0,0" Grid.Row="10" VerticalAlignment="Top" Width="117" Height="30" FontSize="16" FontWeight="Bold" Click="Print_Button_Click"/>
+        </Grid>
+        <Label Content="Car ID" HorizontalAlignment="Left" Margin="551,16,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.469,1.978" Width="68" FontWeight="Bold" FontSize="14"/>
+        <Label Content="Miles driven" HorizontalAlignment="Left" Margin="551,73,0,0" VerticalAlignment="Top" Width="91" FontWeight="Bold" FontSize="14"/>
+        <Label Content="Gas cost" HorizontalAlignment="Left" Margin="551,126,0,0" VerticalAlignment="Top" Width="68" FontWeight="Bold" FontSize="14"/>
+        <Label Content="Tax cost" HorizontalAlignment="Left" Margin="551,175,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.621,0.095" Width="68" FontWeight="Bold" FontSize="14"/>
+        <Label Content="Service cost" HorizontalAlignment="Left" Margin="551,228,0,0" VerticalAlignment="Top" Width="91" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Extra cost" HorizontalAlignment="Left" Margin="551,279,0,0" VerticalAlignment="Top" Width="91" FontWeight="Bold" FontSize="14"/>
+        <Label x:Name="labelresult" Content="Cost per mile" HorizontalAlignment="Left" Margin="536,478,0,0" VerticalAlignment="Top" Width="111" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="Exit_Button" Content="Exit" HorizontalAlignment="Left" Margin="10,532,0,0" VerticalAlignment="Top" Width="113" Height="28" FontWeight="Bold" FontSize="16" Click="Exit_Button_Click"/>
+        <Button x:Name="NewCar_Button" Content="New car" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="126" Height="32" FontSize="16" FontWeight="Bold" Click="NewCar_Button_Click"/>
+        <ListBox x:Name="Car_List" HorizontalAlignment="Left" Height="393" Margin="22,88,0,0" VerticalAlignment="Top" Width="294" SelectionChanged="Car_List_SelectionChanged"/>
+        <Label Content="List of cars:" HorizontalAlignment="Left" Margin="22,47,0,0" VerticalAlignment="Top" Width="101" FontSize="16" FontWeight="Bold"/>
+        <CheckBox x:Name="Bus_CheckBox" Content="Bus" HorizontalAlignment="Left" Margin="321,236,0,0" VerticalAlignment="Top" Height="21" FontSize="14" FontWeight="Bold" Checked="Bus_CheckBox_Checked"/>
+        <CheckBox x:Name="RegularCab_CheckBox" Content="Regular Cab" HorizontalAlignment="Left" Margin="321,134,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold" Checked="CheckBox_Checked"/>
+        <CheckBox x:Name="WheelChair_CheckBox" Content="Wheelchair adapted" HorizontalAlignment="Left" Margin="321,183,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold" Checked="WheelChair_CheckBox_Checked"/>
+        <Label Content="Transport type:" HorizontalAlignment="Left" Margin="321,79,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <TextBox x:Name="Car_Number" HorizontalAlignment="Left" Height="32" Margin="221,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="32" RenderTransformOrigin="0.406,1.187" TextChanged="TextBox_TextChanged" FontSize="14"/>
+        <Label Content="Car:" HorizontalAlignment="Left" Margin="174,10,0,0" VerticalAlignment="Top" Height="32" Width="42" FontWeight="Bold" FontSize="16"/>
+
     </Grid>
 </Window>
