--- a/CCC_CarCostCalculatorWPF/MainWindow.xaml
+++ b/CCC_CarCostCalculatorWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CCC_CarCostCalculatorWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="Taxi Company Car Calculator List" Height="600" Width="800">
     <Grid Background="#FFF6F5EF">
         <Grid HorizontalAlignment="Left" Height="560" Margin="647,10,0,0" VerticalAlignment="Top" Width="137">
             <Grid.RowDefinitions>
